# ozzie

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dist-workspace.toml  release.toml  run.bat  run.sh
clients/ozzie-tui/: Cargo.toml
clients/ozzie-tui/src/: app.rs  backend.rs  client.rs  events.rs  input.rs  lib.rs  main.rs  runner.rs  status.rs  tui.rs
clients/ozzie-tui/src/block/: assistant.rs  mod.rs  system.rs  tool_call.rs  user.rs
clients/ozzie-tui/src/composer/: mod.rs  textarea.rs
clients/ozzie-tui/src/overlays/: approval.rs  mod.rs
clients/ozzie-tui/src/render/: context.rs  highlight.rs  markdown.rs  mod.rs  shimmer.rs  timestamp.rs
clients/ozzie-tui/src/streaming/: markdown.rs  mod.rs
clients/ozzie-tui/src/terminal/: block_render.rs  input_render.rs  mod.rs  prompt_render.rs  status_render.rs
clients/ozzie-tui/src/transcript/: approval.rs  assistant.rs  cell.rs  mod.rs  tool.rs  user.rs
connectors/ozzie-discord-bridge/: Cargo.toml
connectors/ozzie-discord-bridge/src/: lib.rs  main.rs  types.rs
connectors/ozzie-file-bridge/: Cargo.toml
connectors/ozzie-file-bridge/src/: lib.rs  main.rs
connectors/ozzie-gateway-client/: Cargo.toml
connectors/ozzie-gateway-client/src/: lib.rs  types.rs  ws.rs
crates/ozzie-cli/: Cargo.toml  build.rs
crates/ozzie-cli/src/: config_loader.rs  crypt.rs  main.rs  output.rs  provider_factory.rs
crates/ozzie-cli/src/commands/: ask.rs  connector.rs  conversations.rs  daemon.rs  events.rs  gateway.rs  mcp_serve.rs  memory.rs  mod.rs  pairing.rs  schedule.rs  secret.rs  sessions.rs  status.rs  tui.rs
crates/ozzie-cli/src/config_input/: mod.rs  model_catalog.yaml  presets.rs  secrets.rs  section.rs  stdin_collector.rs
crates/ozzie-cli/tests/e2e/: budget.rs  harness.rs  main.rs  memory.rs  multimodal.rs  session.rs  simple_chat.rs  tool_calling.rs
crates/ozzie-client/: Cargo.toml
crates/ozzie-client/src/: connection.rs  credential.rs  event.rs  lib.rs
crates/ozzie-core/: Cargo.toml
crates/ozzie-core/src/: lib.rs
crates/ozzie-core/src/actors/: mod.rs  pool.rs
crates/ozzie-core/src/auth/: device.rs  mod.rs  traits.rs
crates/ozzie-core/src/config/: loader.rs  mod.rs  types.rs
crates/ozzie-core/src/connector/: mod.rs  types.rs
crates/ozzie-core/src/conscience/: ast_guard.rs  constraint.rs  env_filter.rs  mod.rs  permissions.rs  sandbox.rs  scrub.rs  wrapper.rs
crates/ozzie-core/src/domain/: capability.rs  conversation.rs  dream.rs  memory_schema.rs  message.rs  mod.rs  ports.rs  schedule.rs  session.rs  tier.rs  toolset.rs  wiki.rs
crates/ozzie-core/src/events/: bus.rs  mod.rs  types.rs
crates/ozzie-core/src/layered/: indexer.rs  manager.rs  mod.rs  retriever.rs  store.rs  types.rs
crates/ozzie-core/src/policy/: mod.rs  pairing.rs  pending.rs  resolver.rs  types.rs
crates/ozzie-core/src/profile/: mod.rs  types.rs
crates/ozzie-core/src/project/: loader.rs  mod.rs  registry.rs  types.rs
crates/ozzie-core/src/prompt/: catalog.rs  composer.rs  mod.rs  persona.rs  sections.rs
crates/ozzie-core/src/skills/: dag.rs  loader.rs  mod.rs  registry.rs  runner.rs  types.rs
crates/ozzie-core/src/storage/: mod.rs
crates/ozzie-gateway/: Cargo.toml
crates/ozzie-gateway/src/: auth.rs  handler.rs  hub.rs  lib.rs  mcp.rs  memory_api.rs  pair_device.rs  pairing.rs  profile_api.rs  protocol.rs  server.rs
crates/ozzie-gateway/src/auth/: composite.rs  device.rs  local.rs  middleware.rs  mod.rs  traits.rs
crates/ozzie-llm/: Cargo.toml  README.md
crates/ozzie-llm/src/: auth.rs  content.rs  driver.rs  errors.rs  fallback.rs  helpers.rs  lib.rs  resilience.rs  schema.rs  secrets.rs  toolshim.rs
crates/ozzie-llm/src/providers/: anthropic.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  xai.rs
crates/ozzie-llm/tests/: provider_integration.rs
crates/ozzie-memory/: Cargo.toml
crates/ozzie-memory/src/: consolidation.rs  decay.rs  frontmatter.rs  lib.rs  markdown_store.rs  page_frontmatter.rs  page_store.rs  pipeline.rs  retriever.rs  sqlite_store.rs  vector_store.rs
crates/ozzie-protocol/: Cargo.toml
crates/ozzie-protocol/src/: event_kind.rs  frame.rs  lib.rs  prompt.rs  request.rs
crates/ozzie-runtime/: Cargo.toml
crates/ozzie-runtime/src/: approval.rs  blob_store.rs  context_compressor.rs  conversation.rs  conversation_registry.rs  conversation_runtime.rs  cost_tracker.rs  event_logger.rs  event_runner.rs  file_conversation_store.rs  file_session_store.rs  heartbeat.rs  json_device_store.rs  json_pairing_store.rs  layered_store.rs  lib.rs  llm_summarizer.rs  memory_retriever.rs  page_retriever.rs  pairing_manager.rs  provider_registry.rs  react.rs  session.rs  session_runtime.rs  storage.rs  toolset.rs
crates/ozzie-runtime/src/dream/: lint.rs  (+8 more)
crates/ozzie-tools/: Cargo.toml
crates/ozzie-tools/src/: lib.rs  registry.rs
crates/ozzie-utils/: Cargo.toml
crates/ozzie-utils/src/: lib.rs
sages/sage-layered/: Cargo.toml
sages/sage-layered/src/: indexer.rs  retriever.rs
sages/sage-profile/: Cargo.toml
sages/sage-profile/src/: types.rs
worm/worm-dream/: Cargo.toml
worm/worm-dream/src/: classifier.rs  index.rs  lib.rs  lint.rs  synthesizer.rs  types.rs
worm/worm-memory/: Cargo.toml
worm/worm-memory-sqlite/: Cargo.toml
worm/worm-memory-sqlite/src/: id.rs  lib.rs  markdown_store.rs  page_store.rs  sqlite_store.rs  vector_store.rs
worm/worm-memory/src/: consolidation.rs  decay.rs  entry.rs  error.rs  frontmatter.rs  lib.rs  page_frontmatter.rs  pipeline.rs  retriever.rs  store.rs  vector.rs  wiki.rs
worm/worm-profile-fs/: Cargo.toml
worm/worm-profile-fs/src/: lib.rs
worm/worm-project/: Cargo.toml
worm/worm-project/src/: lib.rs  loader.rs  registry.rs  repository.rs  types.rs
worm/worm-sandbox/: Cargo.toml  README.md
worm/worm-sandbox/src/: ast_guard.rs  env_filter.rs  executor.rs  landlock.rs  lib.rs  noop.rs  regex_guard.rs  sandbox.rs  seatbelt.rs  windows.rs
worm/worm-skills/: Cargo.toml
worm/worm-skills/src/: dag.rs  lib.rs  loader.rs  registry.rs  repository.rs  types.rs
(+208 files in other folders)
