[workspace]
resolver = "3"
members = ["crates/*", "connectors/*", "clients/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dohr-michael/ozzie"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

# Async
async-trait = "0.1"
futures-util = "0.3"

# Utils
base64 = "0.22"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
schemars = "0.8"
rmcp = { version = "0.16", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-streamable-http-server"] }

# Memory
rusqlite = { version = "0.33", features = ["bundled", "modern_sqlite"] }

# LLM
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
pin-project-lite = "0.2"

# Gateway
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = "0.12"
ratatui = "0.29"

# Test
dotenvy = "0.15"
paste = "1"

# Crypto
age = { version = "0.11", features = ["armor"] }

# Internal crates
ozzie-core = { path = "crates/ozzie-core" }
ozzie-types = { path = "crates/ozzie-types" }
ozzie-llm = { path = "crates/ozzie-llm" }
ozzie-runtime = { path = "crates/ozzie-runtime" }
ozzie-tools = { path = "crates/ozzie-tools" }
ozzie-protocol = { path = "crates/ozzie-protocol" }
ozzie-client = { path = "crates/ozzie-client" }
ozzie-gateway = { path = "crates/ozzie-gateway" }
ozzie-memory = { path = "crates/ozzie-memory" }
ozzie-utils = { path = "crates/ozzie-utils" }

# Clients
ozzie-tui = { path = "clients/ozzie-tui" }

# Connectors
ozzie-discord-bridge = { path = "connectors/ozzie-discord-bridge" }
ozzie-file-bridge = { path = "connectors/ozzie-file-bridge" }
