[workspace]
resolver = "3"
members = ["crates/*", "connectors/*", "worm/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/dohr-michael/ozzie"

[workspace.dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

# Async
async-trait = "0.1"
futures-util = "0.3"

# Utils
base64 = "0.22"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
schemars = "0.8"
rmcp = { version = "0.16", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-streamable-http-server"] }

# Memory
rusqlite = { version = "0.33", features = ["bundled", "modern_sqlite"] }

# LLM
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
pin-project-lite = "0.2"

# Gateway
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Discord
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = "0.12"
ratatui = "0.29"

# Test
dotenvy = "0.15"
paste = "1"

# Crypto
age = { version = "0.11", features = ["armor"] }

# Internal crates
ozzie-core = { version = "0.1.0", path = "crates/ozzie-core" }
ozzie-types = { version = "0.1.0", path = "crates/ozzie-types" }
ozzie-llm = { version = "0.1.0", path = "crates/ozzie-llm" }
ozzie-runtime = { version = "0.1.0", path = "crates/ozzie-runtime" }
ozzie-tools = { version = "0.1.0", path = "crates/ozzie-tools" }
ozzie-protocol = { version = "0.1.0", path = "crates/ozzie-protocol" }
ozzie-client = { version = "0.1.0", path = "crates/ozzie-client" }
ozzie-gateway = { version = "0.1.0", path = "crates/ozzie-gateway" }
ozzie-memory = { version = "0.1.0", path = "crates/ozzie-memory" }
ozzie-utils = { version = "0.1.0", path = "crates/ozzie-utils" }

# Worm (independent publishable crates — named after Sheldon Hamilton's wormholes)
worm-profile = { version = "0.1.0", path = "worm/worm-profile" }
worm-layered = { version = "0.1.0", path = "worm/worm-layered" }

# Connectors
ozzie-gateway-client = { version = "0.1.0", path = "connectors/ozzie-gateway-client" }
ozzie-discord-bridge = { version = "0.1.0", path = "connectors/ozzie-discord-bridge" }
ozzie-file-bridge = { version = "0.1.0", path = "connectors/ozzie-file-bridge" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
