[package]
name = "ozzie-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Agent OS — Terminal UI (ratatui)"

[dependencies]
ozzie-core = { workspace = true }
ozzie-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = "1"
pulldown-cmark = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
