[package]
name = "ozzie-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ozzie_tui"
path = "src/lib.rs"

[[bin]]
name = "ozzie-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Ozzie
ozzie-client = { workspace = true }
ozzie-types = { workspace = true }
ozzie-protocol = { workspace = true }
ozzie-utils = { workspace = true }

# Markdown rendering
pulldown-cmark = { workspace = true }

# Error handling / logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Coloration syntaxique (local à ozzie-tui, compile long — séparé du workspace)
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-onig"] }

# Misc
serde = { workspace = true }
serde_json = { workspace = true }
