[package]
name = "ozzie-discord-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Agent OS — Discord connector bridge (serenity + JSON-RPC)"

[dependencies]
ozzie-client = { workspace = true }
ozzie-protocol = { workspace = true }
ozzie-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "model", "rustls_backend"] }

[[bin]]
name = "ozzie-discord-bridge"
path = "src/main.rs"
