[package]
name = "ozzie-discord-bridge"
version = "0.1.0"
description = "Ozzie Discord connector bridge (serenity + JSON-RPC gateway client)"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
ozzie-gateway-client.workspace = true
serenity.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

[[bin]]
name = "ozzie-discord-bridge"
path = "src/main.rs"
