[package]
name = "ozzie-gateway-client"
description = "Protocol-level client for the Ozzie gateway (JSON-RPC 2.0 over WebSocket)"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ozzie-types.workspace = true
async-trait.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
