[package]
name = "ozzie-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Agent OS — CLI binary"

[[bin]]
name = "ozzie"
path = "src/main.rs"

[dependencies]
ozzie-core = { workspace = true }
ozzie-utils = { workspace = true }
ozzie-discord-bridge = { workspace = true }
ozzie-file-bridge = { workspace = true }
ozzie-llm = { workspace = true }
ozzie-runtime = { workspace = true }
ozzie-tools = { workspace = true }
ozzie-client = { workspace = true }
ozzie-gateway = { workspace = true }
ozzie-memory = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
base64 = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
comfy-table = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
age = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
