[package]
name = "ozzie-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — WebSocket client SDK"

[dependencies]
ozzie-protocol = { path = "../ozzie-protocol" }
ozzie-types = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
