[package]
name = "ozzie-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — pure domain layer"

[dependencies]
ozzie-types = { workspace = true }
ozzie-llm = { workspace = true }
worm-profile = { workspace = true }
worm-layered = { workspace = true }
worm-sandbox = { workspace = true }
worm-skills = { workspace = true }
worm-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "process"] }
async-trait = { workspace = true }
rand = { workspace = true }
hex = "0.4"
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
