[package]
name = "ozzie-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — HTTP/WS gateway + MCP server"

[dependencies]
ozzie-protocol = { path = "../ozzie-protocol" }
ozzie-types = { workspace = true }
ozzie-core = { workspace = true }
ozzie-utils = { workspace = true }
ozzie-runtime = { workspace = true }
ozzie-tools = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = "0.4"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { workspace = true }
