[package]
name = "ozzie-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-provider LLM client for Rust — streaming, tool calling, circuit breaker, 10 providers"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
paste = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
