[package]
name = "ozzie-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — semantic memory (re-exports worm-memory + worm-memory-sqlite)"

[dependencies]
worm-memory = { workspace = true }
worm-memory-sqlite = { workspace = true }
