[package]
name = "ozzie-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — ReAct loop, task runner, sessions"

[dependencies]
ozzie-core = { workspace = true }
worm-layered = { workspace = true }
worm-sandbox = { workspace = true }
ozzie-types = { workspace = true }
ozzie-utils = { workspace = true }
ozzie-llm = { path = "../ozzie-llm" }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
ozzie-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
tokio-util = "0.7"
dashmap = "6"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
