[package]
name = "ozzie-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Agent OS — Tool registry, native tools, sandbox"

[dependencies]
ozzie-core = { workspace = true }
ozzie-utils = { workspace = true }
ozzie-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
glob = "0.3"
schemars = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
ozzie-runtime = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
