[package]
name = "ozzie-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ozzie Assistant — shared utilities (i18n, secrets, names)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
