[package]
name = "worm-dream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dream consolidation logic for AI agents — classification, clustering, lint, wiki synthesis"
keywords = ["ai-agent", "memory", "consolidation", "wiki"]
categories = ["data-structures"]

[dependencies]
worm-memory = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
