[package]
name = "worm-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory engine for AI agents — types, traits, retrieval, decay, frontmatter"
keywords = ["ai-agent", "memory", "semantic-search", "retrieval"]
categories = ["data-structures"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
