[package]
name = "worm-profile-fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File-based profile repository for worm-profile"
keywords = ["ai-agent", "user-profile", "filesystem"]
categories = ["filesystem"]

[dependencies]
worm-profile = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
