[package]
name = "worm-project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Project workspace discovery and manifest loading for AI agents"
readme = "README.md"
keywords = ["ai-agent", "project", "workspace"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
