[package]
name = "worm-project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Project workspace discovery and manifest loading for AI agents"
readme = "README.md"
keywords = ["ai-agent", "project", "workspace"]
categories = ["data-structures"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
