[package]
name = "worm-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell command sandboxing for AI agents — AST validation, path jail, credential scrubbing"
keywords = ["ai-agent", "sandbox", "security", "shell-parser"]
categories = ["command-line-utilities"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
brush-parser = "0.3.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
