[package]
name = "worm-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell command sandboxing for AI agents — AST validation, path jail, credential scrubbing"
readme = "README.md"
keywords = ["ai-agent", "sandbox", "security", "shell-parser"]
categories = ["command-line-utilities"]


[dependencies]
brush-parser = "0.3.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
