[package]
name = "worm-skills"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill engine for AI agents — YAML/Markdown DAG workflows, registry, loader"
readme = "README.md"
keywords = ["ai-agent", "skills", "workflow", "dag"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
